--- a/Python/templates/checkout.html
+++ b/Python/templates/checkout.html
@@ -72,20 +72,21 @@
             </div>
           </form>
         </div>
+
         <div class="col-md-8 order-md-1">
           <h4 class="mb-3">Billing address</h4>
-          <form class="needs-validation" novalidate>
+          <form class="needs-validation" method="POST" action="" novalidate>
             <div class="row">
               <div class="col-md-6 mb-3">
                 <label for="firstName">First name</label>
-                <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+                <input type="text" class="form-control" id="firstName" placeholder="" name="firstName" value="{{ request.form.firstName }}" required>
                 <div class="invalid-feedback">
                   Valid first name is required.
                 </div>
               </div>
               <div class="col-md-6 mb-3">
                 <label for="lastName">Last name</label>
-                <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
+                <input type="text" class="form-control" id="lastName" placeholder="" name="secondName" value="{{ request.form.secondName }}" required>
                 <div class="invalid-feedback">
                   Valid last name is required.
                 </div>
@@ -93,21 +94,8 @@
             </div>
 
             <div class="mb-3">
-              <label for="username">Username</label>
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <span class="input-group-text">@</span>
-                </div>
-                <input type="text" class="form-control" id="username" placeholder="Username" required>
-                <div class="invalid-feedback" style="width: 100%;">
-                  Your username is required.
-                </div>
-              </div>
-            </div>
-
-            <div class="mb-3">
               <label for="email">Email <span class="text-muted">(Optional)</span></label>
-              <input type="email" class="form-control" id="email" placeholder="you@example.com">
+              <input type="email" class="form-control" id="email" placeholder="you@example.com" name="email" value="{{ request.form.email }}">
               <div class="invalid-feedback">
                 Please enter a valid email address for shipping updates.
               </div>
@@ -115,7 +103,7 @@
 
             <div class="mb-3">
               <label for="address">Address</label>
-              <input type="text" class="form-control" id="address" placeholder="1234 Main St" required>
+              <input type="text" class="form-control" id="address" placeholder="1234 Main St" name="address" value="{{ request.form.address }}" required>
               <div class="invalid-feedback">
                 Please enter your shipping address.
               </div>
@@ -123,14 +111,14 @@
 
             <div class="mb-3">
               <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
-              <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
+              <input type="text" class="form-control" id="address2" placeholder="Apartment or suite" name="address2" value="{{ request.form.address2 }}">
             </div>
 
             <div class="row">
               <div class="col-md-5 mb-3">
                 <label for="country">Country</label>
-                <select class="custom-select d-block w-100" id="country" required>
-                  <option value="">Choose...</option>
+                <select class="custom-select d-block w-100" id="country" name="country" value="{{ request.form.country }}" required>
+                  <option name="country">Choose...</option>
                   <option>United States</option>
                 </select>
                 <div class="invalid-feedback">
@@ -139,8 +127,8 @@
               </div>
               <div class="col-md-4 mb-3">
                 <label for="state">State</label>
-                <select class="custom-select d-block w-100" id="state" required>
-                  <option value="">Choose...</option>
+                <select class="custom-select d-block w-100" id="state" name="state" value="{{ request.form.state }}" required>
+                  <option name="state">Choose...</option>
                   <option>California</option>
                 </select>
                 <div class="invalid-feedback">
@@ -149,7 +137,7 @@
               </div>
               <div class="col-md-3 mb-3">
                 <label for="zip">Zip</label>
-                <input type="text" class="form-control" id="zip" placeholder="" required>
+                <input type="text" class="form-control" id="zip" placeholder="" name="zip" value="{{ request.form.zip }}" required>
                 <div class="invalid-feedback">
                   Zip code required.
                 </div>
@@ -185,7 +173,7 @@
             <div class="row">
               <div class="col-md-6 mb-3">
                 <label for="cc-name">Name on card</label>
-                <input type="text" class="form-control" id="cc-name" placeholder="" required>
+                <input type="text" class="form-control" id="cc-name" placeholder="" name="cardName" value="{{ request.form.cardName }} "required>
                 <small class="text-muted">Full name as displayed on card</small>
                 <div class="invalid-feedback">
                   Name on card is required
@@ -193,7 +181,7 @@
               </div>
               <div class="col-md-6 mb-3">
                 <label for="cc-number">Credit card number</label>
-                <input type="text" class="form-control" id="cc-number" placeholder="" required>
+                <input type="text" class="form-control" id="cc-number" placeholder="" name="cardNum" value="{{ request.form.cardNum }}" required>
                 <div class="invalid-feedback">
                   Credit card number is required
                 </div>
@@ -202,14 +190,14 @@
             <div class="row">
               <div class="col-md-3 mb-3">
                 <label for="cc-expiration">Expiration</label>
-                <input type="text" class="form-control" id="cc-expiration" placeholder="" required>
+                <input type="text" class="form-control" id="cc-expiration" placeholder="" name="cardExp" value="{{ request.form.cardExp }}" required>
                 <div class="invalid-feedback">
                   Expiration date required
                 </div>
               </div>
               <div class="col-md-3 mb-3">
                 <label for="cc-cvv">CVV</label>
-                <input type="text" class="form-control" id="cc-cvv" placeholder="" required>
+                <input type="text" class="form-control" id="cc-cvv" placeholder="" name="cardCVV" value="{{ request.form.cardCVV }}" required>
                 <div class="invalid-feedback">
                   Security code required
                 </div>
@@ -222,12 +210,12 @@
       </div>
       
     </div>
-<footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Raymond Huang, Gurpreeth Singh, Tenzin Loden 2019</p>
-    </div>
-    <!-- /.container -->
-  </footer>
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; Raymond Huang, Gurpreeth Singh, Tenzin Loden 2019</p>
+      </div>
+      <!-- /.container -->
+    </footer>
 {% endblock content %}
 
 
